--- a/config/log4j/log4j.properties
+++ b/config/log4j/log4j.properties
@@ -1,5 +1,9 @@
 log4j.rootLogger=WARN, A1
 
+
+log4j.logger.de.cesr.parma.core.PmParameterManager.values = INFO
+
+
 ## A1 is set to be a ConsoleAppender.
 log4j.appender.A1=org.apache.log4j.ConsoleAppender
 ## A1 uses PatternLayout.
