--- a/config/log4j/log4j.properties
+++ b/config/log4j/log4j.properties
@@ -1,5 +1,6 @@
 log4j.rootLogger=WARN, A1
 
+#log4j.logger.de.cesr.parma.core.PmParameterManager = DEBUG
 
 log4j.logger.de.cesr.parma.core.PmParameterManager.values = INFO
 
