--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.0-beta-2</version>
+				<version>3.3</version>
 				<executions>
 
 					<execution>
